# 3-ATLAS

./: .claude  .claudeignore  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  RELEASE_v1.2.0.md  dev.ps1  package.json  start.ps1  stop.ps1
.archive/: README.md
apps/echo/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/synapse/backend/: .env.example  .env.template  Dockerfile  Dockerfile.prod  PHASE1_DEPLOYMENT.md  alembic.ini  debug_routes.py  epcb_tools_v3.db  init_database.py  init_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  seed_user.py  synapse.db  test_audit.db  test_metamodel.py  test_rule_engine.py  verify_fix.py  verify_user.py  wait-for-postgres.sh
apps/synapse/backend/.db.archive/: epcb_tools.db  epcb_tools_v2.db  test_audit.db  test_export.db  test_import.db
apps/synapse/backend/Data_raw/: PRM-010-17-LST-101-R0_Template.xlsx  sample_data.csv
apps/synapse/backend/alembic/: env.py
apps/synapse/backend/allure-results/: 006ef77e-4b04-42ef-9a9e-10e8c9c4132f-container.json  00a0f23f-d150-47a8-943f-c1663cf2fc49-container.json  00fb614f-242b-4aa7-ae95-9cd85944126f-container.json  037793ac-008b-43b7-b082-c284aa21a292-result.json  03c3bcfe-fe82-4173-83e1-48254ca8fbc3-container.json  055fced0-9ec9-441b-b192-46dc1980840e-result.json  06f0b8bb-8197-40fd-9f64-58bafdbe4b6b-container.json  07d31c95-1e58-442e-8258-2565e31d2489-container.json  08a5e034-a398-455e-a8ba-89699438aa57-container.json  09408475-97bc-468d-8751-ecfe8e42793c-result.json  09f1e354-ede6-448c-a4ff-57fef86a9e54-container.json  09f26dc4-961f-4fc2-8ab8-f11132a63922-result.json  0b787d76-547b-4de8-826c-1c1370e13b9c-container.json  0c238453-6338-429b-b765-8992bde4e0d3-container.json  0cfbbba0-44cf-41ae-944b-735766f9da9c-result.json  0d3fbbc9-daee-4992-97ad-e7114dfbd776-container.json  0e00183a-6033-4110-8b27-e64d910bf35b-result.json  0e30e37b-badc-47bb-ad48-59efad3d9578-container.json  0ee8eca6-8d87-4123-93fc-18b711eaab83-container.json  11b77553-61b7-4464-bfc7-26d7b34f4e16-result.json  11cb8361-ba9b-4f61-924d-6391ac1bcd9f-container.json  12059c3f-29b6-4d2b-a94a-cecdfabfd136-container.json  13f7c435-46ec-4c72-bb18-e3c1e3803ec8-container.json  1538f699-fc60-4646-9202-018e9631927b-container.json  (+268 more)
(+1178 files in other folders)
