[project]
name = "axoiq-synapse-backend"
version = "0.2.2"
description = "SYNAPSE MBSE Platform - Backend API"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",   # function-call-in-default-argument
    "B904",   # raise-without-from-inside-except (TODO: fix later)
    "E501",   # line-too-long (handled by formatter, some edge cases remain)
    "E402",   # module-import-not-at-top (needed for path setup in scripts)
    "E722",   # bare-except (TODO: fix later)
]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "alembic",
    ".venv",
    "tests",
    "scripts",
    "test_*.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
  | migrations
  | alembic
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
ignore_missing_imports = true
exclude = ["migrations/", "alembic/", "tests/"]
